--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             boxDivP.className = 'w3-card w3-round';
 
-            boxDivP.appendChild(document.createTextNode(i));
+            boxDivP.appendChild(document.createTextNode(i+ '%'));
             codeDivP.innerHTML = (output[i][0] + '<br />' + output[i][1]);
 
             boxDiv.appendChild(boxDivP);
